--- a/SpotifyETL.ipynb
+++ b/SpotifyETL.ipynb
@@ -22,7 +22,7 @@
     "import pandas as pd\n",
     "\n",
     "USER_ID = \"vitorhugoma\"\n",
-    "TOKEN = \"BQChMUgeLZ0iUM4scFVjznAnIUSuQgwu3AMpVCL3tFK8Jrw3bidl_R-mVtxUAxR0QI6YHsZMxjEXRJri1fgc26SguTdZ9z_k318QYC4aKzLOGK3XXp9jmWit4KFnZmkLQbnoFL3cRvt0V24I-bERB8Nyn8qnJ42UZdCGBFoP2Z7O2vBVYA\"\n",
+    "TOKEN = \"~~\"\n",
     "\n",
     "\n",
     "def check_empty_values(df):\n",
